build-sys: use --enable-most-builds for distcheck
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -89,11 +89,7 @@ checkconfig:
 		| xargs $(top_srcdir)/tools/checkconfig.sh $(top_srcdir)
 
 
-ENABLE_ALL = --enable-static-programs \
- --enable-elvtune --enable-kill --enable-last \
- --enable-mesg --enable-partx --enable-raw --enable-rdev --enable-reset \
- --enable-login-utils --enable-write --enable-arch --enable-mount
-
+ENABLE_ALL = --enable-static-programs --enable-most-builds
 DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --disable-use-tty-group $(ENABLE_ALL)
 
 
