lib,path: move path access functions from lscpu into lib/path.c
A couple of these functions already have been copied to chcpu.c,
so it makes sense to move these functions into an own file.

Signed-off-by: Heiko Carstens <heiko.carstens@de.ibm.com>

--- a/sys-utils/Makefile.am
+++ b/sys-utils/Makefile.am
@@ -22,7 +22,8 @@ usrbin_exec_PROGRAMS += lscpu
 lscpu_SOURCES = lscpu.c $(top_srcdir)/lib/cpuset.c \
 			$(top_srcdir)/lib/strutils.c \
 			$(top_srcdir)/lib/mbsalign.c \
-			$(top_srcdir)/lib/tt.c
+			$(top_srcdir)/lib/tt.c \
+			$(top_srcdir)/lib/path.c
 dist_man_MANS += lscpu.1
 sbin_PROGRAMS += chcpu
 chcpu_SOURCES = chcpu.c $(top_srcdir)/lib/cpuset.c
